Fix z-index gallerie issue (krooshking)

--- a/src/styles/layout.sass
+++ b/src/styles/layout.sass
@@ -55,6 +55,7 @@ body
   display: flex
   flex-direction: column
   justify-content: space-between
+  z-index: 8
 
 .header
   font-family: 'Ubuntu', sans-serif
